WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93845
[Qt] Assertion in RenderObject::offsetFromAncestorContainer
https://bugs.webkit.org/show_bug.cgi?id=93845
Summary
[Qt] Assertion in RenderObject::offsetFromAncestorContainer
Allan Sandfeld Jensen
Reported
2012-08-13 07:29:29 PDT
When activating a fixed element, the touch-highlighting code will trigger an assert in RenderObject::offsetFromAncestorContainer. ASSERT(nextContainer); This happens because the RenderObject::container skipped the supplied container, due to the element being either fixed or absolute positioned.
Attachments
Patch
(2.26 KB, patch)
2012-08-13 07:32 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-08-13 07:32:03 PDT
Created
attachment 157993
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-13 12:24:28 PDT
Comment on
attachment 157993
[details]
Patch Clearing flags on attachment: 157993 Committed
r125433
: <
http://trac.webkit.org/changeset/125433
>
WebKit Review Bot
Comment 3
2012-08-13 12:24:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug