[Qt] Assertion in RenderObject::offsetFromAncestorContainer https://bugs.webkit.org/show_bug.cgi?id=93845

Reviewed by Kenneth Rohde Christiansen.

Do not attempt to clip using layers that are not containers of the renderer.

* page/GestureTapHighlighter.cpp:


Canonical link: https://commits.webkit.org/111708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125433 268f45cc-cd09-0410-ab3c-d52691b4dbfc